--- a/TODO.txt
+++ b/TODO.txt
@@ -1,19 +1,25 @@
+1. LED
 
-1. 현관에 자동 조명을 만들어보자!
- Led 입출력
- 조도 센서 
- 생체 센서
-2. 디지털 시계를 만들어보자!
- 시프터
- 시계 센서
- 4digt led
-3. 블루투스로 조명을 조종해보자!
- 블루투스
- 모터드라이버(릴레이)
-4. 초인종과 알람을 만들어보자!
- 버튼
- 부저
-5. 도난방지 센서를 만들어보자!
- 초음파 센서(전자석 센서)
-6. 자동문을 만들어보자!
- 서보모터
+버튼으로 LED
+생체센서로 "
+조도센서로 "
+
+2. 서보모터
+
+버튼으로 서보모터
+
+3. 초인종
+
+버튼으로 멜로디(초인종)
+
+4. 시계
+
+시간센서->시프터->4디짓세그먼트
+
+5. 블루투스
+
+어플->블루투스->아두이노
+
+6. 온습도 센서
+
+값 측정
